--- a/src/notes/02css/01.md
+++ b/src/notes/02css/01.md
@@ -1,13 +1,47 @@
 :::snippet CSS 背景属性
 
-| 属性                    | 描述                                                                             |
-| ----------------------- | -------------------------------------------------------------------------------- |
-| `background`            | 复合属性。设置对象的背景特性。                                                   |
-| `background-attachment` | 设置或检索背景图像是随对象内容滚动还是固定的。必须先指定 background-image 属性。 |
-| `background-color`      | 设置或检索对象的背景颜色。                                                       |
-| `background-image`      | 设置或检索对象的背景图像。                                                       |
-| `background-position`   | 设置或检索对象的背景图像位置。必须先指定 background-image 属性。                 |
-| `background-repeat`     | 设置或检索对象的背景图像如何铺排填充。必须先指定 background-image 属性。         |
+| 属性                    | 描述                                                                         | 默认值      |
+| ----------------------- | ---------------------------------------------------------------------------- | ----------- |
+| `background`            | 复合属性。设置对象的背景特性。                                               | none        |
+| `background-color`      | 设置或检索对象的背景颜色。                                                   | transparent |
+| `background-image`      | 设置或检索对象的背景图像。                                                   | none        |
+| `background-attachment` | 设置或检索背景图像是随对象内容滚动还是固定的。必须先指定 background-image 。 | scroll      |
+| `background-position`   | 设置或检索对象的背景图像位置。必须先指定 background-image 。                 | 0% 0%       |
+| `background-repeat`     | 设置或检索对象的背景图像如何铺排填充。必须先指定 background-image 。         | repeat      |
+
+```html
+<style>
+  h1 {
+    background-color: #00ff00;
+  }
+  span {
+    background: #00ff00 url("smiley.gif") no-repeat fixed center;
+  }
+  #div1 {
+    background-image: url("smiley.gif");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+  }
+</style>
+<h1>这是标题 1</h1>
+<span>This is some text</span>
+<div id="div1">
+  <p>
+    <b>注意：</b>该属性工作在 Firefox 和 Opera, background-attachment
+    属性会被设置为 "fixed"。
+  </p>
+</div>
+```
+
+:::
+
+:::snippet CSS margin 及类似 1-4 参数
+
+1. margin:10px 5px 15px 20px; 上边距是 10px、右边距是 5px、下边距是 15px、左边距是 20px
+2. margin:10px 5px 15px; 上边距是 10px、右边距和左边距是 5px、下边距是 15px
+3. margin:10px 5px; 上边距和下边距是 10px、右边距和左边距是 5px
+4. margin:10px; 所有四个边距都是 10px
 
 :::
 
@@ -16,11 +50,13 @@
 | 属性                  | 描述                                   |
 | --------------------- | -------------------------------------- |
 | `border`              | 复合属性。设置对象边框的特性。         |
+| `border-color`        | 设置或检索对象的边框颜色。             |
+| `border-style`        | 设置或检索对象的边框样式。             |
+| `border-width`        | 设置或检索对象的边框宽度。             |
 | `border-bottom`       | 复合属性。设置对象底部边框的特性。     |
 | `border-bottom-color` | 设置或检索对象的底部边框颜色。         |
 | `border-bottom-style` | 设置或检索对象的底部边框样式。         |
 | `border-bottom-width` | 设置或检索对象的底部边框宽度。         |
-| `border-color`        | 设置或检索对象的边框颜色。             |
 | `border-left`         | 复合属性。设置对象左边边框的特性。     |
 | `border-left-color`   | 设置或检索对象的左边边框颜色。         |
 | `border-left-style`   | 设置或检索对象的左边边框样式。         |
@@ -29,40 +65,71 @@
 | `border-right-color`  | 设置或检索对象的右边边框颜色。         |
 | `border-right-style`  | 设置或检索对象的右边边框样式。         |
 | `border-right-width`  | 设置或检索对象的右边边框宽度。         |
-| `border-style`        | 设置或检索对象的边框样式。             |
 | `border-top`          | 复合属性。设置对象顶部边框的特性。     |
 | `border-top-color`    | 设置或检索对象的顶部边框颜色           |
 | `border-top-style`    | 设置或检索对象的顶部边框样式。         |
 | `border-top-width`    | 设置或检索对象的顶部边框宽度。         |
-| `border-width`        | 设置或检索对象的边框宽度。             |
 | `outline`             | 复合属性。设置或检索对象外的线条轮廓。 |
 | `outline-color`       | 设置或检索对象外的线条轮廓的颜色。     |
 | `outline-style`       | 设置或检索对象外的线条轮廓的样式。     |
 | `outline-width`       | 设置或检索对象外的线条轮廓的宽度。     |
 
+```html
+<style>
+  #p-border {
+    border: 5px solid red;
+  }
+  p.border {
+    /* 这三个属性可以带1-4个参数 */
+    border-width: 1px 3px 5px 7px;
+    border-style: solid double dashed;
+    border-color: #ff0000 #0000ff;
+  }
+  p.top {
+    border-style: solid;
+    border-top: thick double #ff0000;
+  }
+  p.outline {
+    border: 1px solid red;
+    outline: green dotted thick;
+  }
+</style>
+<p id="p-border">段落中的一些文本border。</p>
+<p class="border">段落中的一些文本width、style、color。</p>
+<p class="top">段落中的一些文本顶部top。</p>
+<p class="outline">段落中的一些文本顶部outline。</p>
+```
+
 :::
 
-:::snippet CSS 内边距(Padding) 属性
+:::snippet CSS 内边距(Padding) 属性和外边距(Margin) 属性
 
-| 属性             | 描述                         |
-| ---------------- | ---------------------------- |
-| `padding`        | 在一个声明中设置所有填充属性 |
-| `padding-bottom` | 设置元素的底填充             |
-| `padding-left`   | 设置元素的左填充             |
-| `padding-right`  | 设置元素的右填充             |
-| `padding-top`    | 设置元素的顶部填充           |
+| 属性             | 描述                           |
+| ---------------- | ------------------------------ |
+| `padding`        | 在一个声明中设置所有填充属性   |
+| `padding-bottom` | 设置元素的底填充               |
+| `padding-left`   | 设置元素的左填充               |
+| `padding-right`  | 设置元素的右填充               |
+| `padding-top`    | 设置元素的顶部填充             |
+| `margin`         | 在一个声明中设置所有外边距属性 |
+| `margin-bottom`  | 设置元素的下外边距             |
+| `margin-left`    | 设置元素的左外边距             |
+| `margin-right`   | 设置元素的右外边距             |
+| `margin-top`     | 设置元素的上外边距             |
 
-:::
-
-:::snippet CSS 外边距(Margin) 属性
-
-| 属性            | 描述                           |
-| --------------- | ------------------------------ |
-| `margin`        | 在一个声明中设置所有外边距属性 |
-| `margin-bottom` | 设置元素的下外边距             |
-| `margin-left`   | 设置元素的左外边距             |
-| `margin-right`  | 设置元素的右外边距             |
-| `margin-top`    | 设置元素的上外边距             |
+```html
+<style>
+  p.margin {
+    margin: 2cm 4cm 3cm 4cm;
+  }
+  p.padding {
+    border: 1px solid red;
+    padding: 25px;
+  }
+</style>
+<p class="margin">这个文本的外边距为2cm 4cm 3cm 4cm。</p>
+<p class="padding">这个文本的填充边距为25px。</p>
+```
 
 :::
 
@@ -72,14 +139,42 @@
 | ------------ | ------------------ |
 | `height`     | 设置元素的高度     |
 | `max-height` | 设置元素的最大高度 |
-| `max-width`  | 设置元素的最大宽度 |
 | `min-height` | 设置元素的最小高度 |
-| `min-width`  | 设置元素的最小宽度 |
 | `width`      | 设置元素的宽度     |
+| `max-width`  | 设置元素的最大宽度 |
+| `min-width`  | 设置元素的最小宽度 |
+
+```html
+<style>
+  img.height {
+    height: 120px;
+  }
+  p.min-height {
+    min-height: 100px;
+    background-color: yellow;
+  }
+  p.max-height {
+    max-height: 40px;
+    background-color: yellow;
+  }
+</style>
+<img class="height" src="https://www.runoob.com/try/demo_source/logocss.gif" width="95" height="84" />
+<p class="min-height">这段的最小高度设置为100 px。</p>
+<p class="max-height">
+  世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。<br />
+  世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。<br />
+  世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。<br />
+  世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?<br />
+</p>
+```
 
 :::
 
 :::snippet CSS 字体（Font） 属性
+
+font 简写属性在一个声明中设置所有字体属性。
+可设置的属性是（按顺序）： "font-style font-variant font-weight font-size/line-height font-family"
+font-size 和 font-family 的值是必需的。如果缺少了其他值，默认值将被插入，如果有默认值的话。
 
 | 属性           | 描述                         |
 | -------------- | ---------------------------- |
@@ -89,6 +184,40 @@
 | `font-style`   | 规定文本的字体样式           |
 | `font-variant` | 规定文本的字体样式           |
 | `font-weight`  | 规定字体的粗细               |
+
+```html
+<style>
+  p.font {
+    font: italic bold 12px/30px Georgia, serif;
+  }
+  p.size-one {
+    font-size: 100%;
+  }
+  p.size-two {
+    font-size: 15%;
+  }
+  p.variant-small {
+    font-variant: small-caps;
+  }
+  p.weight-thick {
+    font-weight: bold;
+  }
+  p.style-italic {
+    font-style: italic;
+  }
+  p.sansserif {
+    /* 字体会去查找浏览器支持的 */
+    font-family: Arial, Helvetica, sans-serif;
+  }
+</style>
+<p class="font">This is a paragraph. This is a paragraph.</p>
+<p class="size-one">This is a paragraph.</p>
+<p class="size-two">This is a paragraph.</p>
+<p class="variant-small">My name is Hege Refsnes.</p>
+<p class="weight-thick">This is a paragraph.</p>
+<p class="style-italic">这是一个段落,斜体。</p>
+<p class="sansserif">这一段的字体是 Arial.</p>
+```
 
 :::
 
@@ -101,48 +230,244 @@
 | `counter-reset`     | 创建或重置一个或多个计数器                            |
 | `quotes`            | 设置嵌套引用的引号类型                                |
 
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>菜鸟教程(runoob.com)</title>
+    <style type="text/css">
+      a:after {
+        content: " (" attr(href) ")";
+      }
+
+      q:lang(en) {
+        quotes: "~""~""'" "'";
+      }
+
+      body {
+        counter-reset: section;
+      }
+
+      h1 {
+        counter-reset: subsection;
+      }
+
+      h1:before {
+        counter-increment: section;
+        content: " " counter(section) ". ";
+      }
+
+      h2:before {
+        counter-increment: subsection;
+        content: " " counter(section) "." counter(subsection) " ";
+      }
+    </style>
+  </head>
+
+  <body>
+    <p><a href="//www.runoob.com">菜鸟教程</a> - 免费的编程学习网站。</p>
+    <p>
+      <q>This is a <q>big</q> quote.</q>
+    </p>
+    <h1>HTML tutorials</h1>
+    <h2>HTML Tutorial</h2>
+    <h2>XHTML Tutorial</h2>
+    <h2>CSS Tutorial</h2>
+    <h1>XML tutorials</h1>
+    <h2>XML</h2>
+    <h2>XSL</h2>
+  </body>
+</html>
+```
+
 :::
 
-:::snippet CSS 列表(List) 属性
+:::snippet CSS 文本（Text） 属性
 
-| 属性                  | 描述                           |
-| --------------------- | ------------------------------ |
-| `list-style`          | 在一个声明中设置所有的列表属性 |
-| `list-style-image`    | 将图象设置为列表项标记         |
-| `list-style-position` | 设置列表项标记的放置位置       |
-| `list-style-type`     | 设置列表项标记的类型           |
+| 属性              | 描述                                                  |
+| ----------------- | ----------------------------------------------------- |
+| `color`           | 设置文本的颜色                                        |
+| `direction`       | 规定文本的方向 / 书写方向                             |
+| `unicode-bidi`    | 与 direction 属性一起使用，来设置或返回文本是否被重写 |
+| `letter-spacing`  | 设置字符间距                                          |
+| `line-height`     | 设置行高                                              |
+| `text-align`      | 规定文本的水平对齐方式                                |
+| `text-decoration` | 规定添加到文本的装饰效果                              |
+| `text-indent`     | 规定文本块首行的缩进                                  |
+| `text-transform`  | 控制文本的大小写                                      |
+| `vertical-align`  | 设置元素的垂直对齐方式                                |
+| `white-space`     | 设置怎样给一元素控件留白                              |
+| `word-spacing`    | 设置单词间距                                          |
 
-:::
+```html
+<style>
+  p.color1 {
+    color: red;
+  }
 
-:::snippet CSS 定位（Positioning） 属性
+  p.color2 {
+    color: #00ff00;
+  }
 
-| 属性         | 描述                                                 |
-| ------------ | ---------------------------------------------------- |
-| `bottom`     | 设置定位元素下外边距边界与其包含块下边界之间的偏移   |
-| `clear`      | 规定元素的哪一侧不允许其他浮动元素                   |
-| `clip`       | 剪裁绝对定位元素                                     |
-| `cursor`     | 规定要显示的光标的类型（形状）                       |
-| `display`    | 规定元素应该生成的框的类型                           |
-| `float`      | 规定框是否应该浮动                                   |
-| `left`       | 设置定位元素左外边距边界与其包含块左边界之间的偏移   |
-| `overflow`   | 规定当内容溢出元素框时发生的事情                     |
-| `position`   | 规定元素的定位类型                                   |
-| `right`      | 设置定位元素右外边距边界与其包含块右边界之间的偏移   |
-| `top`        | 设置定位元素的上外边距边界与其包含块上边界之间的偏移 |
-| `visibility` | 规定元素是否可见                                     |
-| `z-index`    | 设置元素的堆叠顺序                                   |
+  p.color3 {
+    color: rgb(0, 0, 255);
+  }
 
-:::
+  p.direction {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }
 
-:::snippet CSS 分页（Print） 属性
+  p.line-height1 {
+    line-height: 70%;
+  }
 
-| 属性                | 描述                                                 |
-| ------------------- | ---------------------------------------------------- |
-| `orphans`           | 设置当元素内部发生分页时必须在页面底部保留的最少行数 |
-| `page-break-after`  | 设置元素后的分页行为                                 |
-| `page-break-before` | 设置元素前的分页行为                                 |
-| `page-break-inside` | 设置元素内部的分页行为                               |
-| `widows`            | 设置当元素内部发生分页时必须在页面顶部保留的最少行数 |
+  p.line-height2 {
+    line-height: 25px;
+  }
+
+  p.letter-spacin1 {
+    letter-spacing: 2px;
+  }
+
+  p.letter-spacin2 {
+    letter-spacing: -3px;
+  }
+
+  p.text-transform1 {
+    text-transform: uppercase;
+  }
+
+  p.text-transform2 {
+    text-transform: lowercase;
+  }
+
+  p.text-transform3 {
+    text-transform: capitalize;
+  }
+
+  p.text-indent {
+    text-indent: 50px;
+  }
+
+  p.text-decoration1 {
+    text-decoration: overline;
+  }
+
+  p.text-decoration2 {
+    text-decoration: line-through;
+  }
+
+  p.text-decoration3 {
+    text-decoration: underline;
+  }
+
+  p.text-align1 {
+    text-align: center;
+  }
+
+  p.text-align2 {
+    text-align: left;
+  }
+
+  p.text-align3 {
+    text-align: right;
+  }
+
+  img.top {
+    vertical-align: text-top;
+  }
+
+  img.middle {
+    vertical-align: middle;
+  }
+
+  img.bottom {
+    vertical-align: text-bottom;
+  }
+
+  p.white-space {
+    white-space: nowrap;
+  }
+
+  p.word-spacing {
+    word-spacing: 30px;
+  }
+</style>
+<p class="color1">这是一个普通的段落red。</p>
+<p class="color2">这是一个普通的段落#00ff00。</p>
+<p class="color3">这是一个普通的段落rgb(0,0,255)。</p>
+<p>一些文本。默认的书写方向。</p>
+<p class="direction">一些文本。 Right-to-left 方向。</p>
+<p class="line-height1">
+  这是一个更小行高的段落。line-height不允许负数<br />
+  这是一个更小行高的段落。<br />
+  这是一个更小行高的段落。<br />
+</p>
+
+<p class="line-height2">
+  这是一个更大行高的段落。<br />
+  这是一个更大行高的段落。<br />
+  这是一个更大行高的段落。<br />
+</p>
+<p class="letter-spacin1">这是一个普通的段落。I Love Chinese</p>
+<p class="letter-spacin2">这是一个普通的段落。I Love Chinese</p>
+<p class="text-transform1">This is some text.</p>
+<p class="text-transform2">This is some text.</p>
+<p class="text-transform3">This is some text.</p>
+<p class="text-indent">
+  世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。<br />
+  世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。<br />
+  世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。<br />
+  世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?<br />
+</p>
+<p class="text-decoration1">This is some text.</p>
+<p class="text-decoration2">This is some text.</p>
+<p class="text-decoration3">This is some text.</p>
+<p class="text-align1">This is some text.</p>
+<p class="text-align2">This is some text.</p>
+<p class="text-align3">This is some text.</p>
+<p>
+  一个<img
+    class="middle"
+    src="https://www.runoob.com/try/demo_source/logo.png"
+    alt="w3cschool"
+    width="270"
+    height="50"
+  />默认对齐的图像。
+</p>
+<p>
+  一个<img
+    class="top"
+    src="https://www.runoob.com/try/demo_source/logo.png"
+    alt="w3cschool"
+    width="270"
+    height="50"
+  />
+  text-top 对齐的图像。
+</p>
+<p>
+  一个<img
+    class="bottom"
+    src="https://www.runoob.com/try/demo_source/logo.png"
+    alt="w3cschool"
+    width="270"
+    height="50"
+  />
+  text-bottom 对齐的图像。
+</p>
+<p class="white-space">
+  世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。
+  世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。
+  世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。
+  世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?
+</p>
+<p class="word-spacing">
+  世人都晓神仙好,惟有功名忘不了!  古 今 将 相 在 何 方 ? 荒 冢 一堆草没了。 This
+  is some text.
+</p>
+```
 
 :::
 
@@ -156,24 +481,308 @@
 | `empty-cells`     | 规定是否显示表格中的空单元格上的边框和背景 |
 | `table-layout`    | 设置用于表格的布局算法                     |
 
+```html
+<style>
+  table.collapse {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+
+  table.collapse,
+  table.collapse td,
+  table.collapse th {
+    border: 1px solid black;
+  }
+
+  table.spacing {
+    border-collapse: separate;
+    border-spacing: 10px;
+  }
+
+  caption {
+    caption-side: bottom;
+  }
+
+  table.empty {
+    border-collapse: separate;
+    empty-cells: hide;
+  }
+
+  table.layout1 {
+    table-layout: auto;
+  }
+
+  table.layout2 {
+    table-layout: fixed;
+  }
+</style>
+border-collapse
+<table class="collapse">
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th>
+  </tr>
+  <tr>
+    <td>Peter</td>
+    <td>Griffin</td>
+  </tr>
+  <tr>
+    <td>Lois</td>
+    <td>Griffin</td>
+  </tr>
+</table>
+
+<br />
+border-spacing
+<table class="spacing" border="1">
+  <tr>
+    <td>Peter</td>
+    <td>Griffin</td>
+  </tr>
+  <tr>
+    <td>Lois</td>
+    <td>Griffin</td>
+  </tr>
+</table>
+
+<br />
+caption
+<table border="1">
+  <caption>
+    Table 1.1 Customers
+  </caption>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+</table>
+
+<br />
+empty-cells
+<table border="1" class="empty">
+  <tr>
+    <td>Peter</td>
+    <td>Griffin</td>
+  </tr>
+  <tr>
+    <td>Lois</td>
+    <td></td>
+  </tr>
+</table>
+
+<br />
+table-layout:auto
+<table class="layout1" border="1" width="100%">
+  <tr>
+    <td width="5%">1000000000000000000000000000</td>
+    <td width="95%">10000000</td>
+  </tr>
+</table>
+
+<br />
+table-layout:fixed
+<table class="layout2" border="1" width="100%">
+  <tr>
+    <td width="5%">1000000000000000000000000000</td>
+    <td width="95%">10000000</td>
+  </tr>
+</table>
+```
+
 :::
 
-:::snippet CSS 文本（Text） 属性
+:::snippet CSS 列表(List) 属性
+list-style 简写属性在一个声明中设置所有的列表属性。
 
-| 属性              | 描述                                                  |
-| ----------------- | ----------------------------------------------------- |
-| `color`           | 设置文本的颜色                                        |
-| `direction`       | 规定文本的方向 / 书写方向                             |
-| `letter-spacing`  | 设置字符间距                                          |
-| `line-height`     | 设置行高                                              |
-| `text-align`      | 规定文本的水平对齐方式                                |
-| `text-decoration` | 规定添加到文本的装饰效果                              |
-| `text-indent`     | 规定文本块首行的缩进                                  |
-| `text-transform`  | 控制文本的大小写                                      |
-| `unicode-bidi`    | 与 direction 属性一起使用，来设置或返回文本是否被重写 |
-| `vertical-align`  | 设置元素的垂直对齐方式                                |
-| `white-space`     | 设置怎样给一元素控件留白                              |
-| `word-spacing`    | 设置单词间距                                          |
-| `text-emphasis`   | 向元素的文本应用重点标记以及重点标记的前景色。        |
+可以设置的属性（按顺序）： list-style-type, list-style-position, list-style-image.
+
+可以不设置其中的某个值，比如 "list-style:circle inside;" 也是允许的。未设置的属性会使用其默认值。
+
+| 属性                  | 描述                           |
+| --------------------- | ------------------------------ |
+| `list-style`          | 在一个声明中设置所有的列表属性 |
+| `list-style-image`    | 将图象设置为列表项标记         |
+| `list-style-position` | 设置列表项标记的放置位置       |
+| `list-style-type`     | 设置列表项标记的类型           |
+
+```html
+<style>
+  ul {
+    list-style: square inside url("sqpurple.gif");
+  }
+</style>
+该列表的 list-style-position 的值是 "inside"：
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Coca Cola</li>
+</ul>
+```
+
+:::
+
+:::snippet CSS 定位（Positioning） 属性
+
+| 属性         | 描述                                                 |
+| ------------ | ---------------------------------------------------- |
+| `position`   | 规定元素的定位类型                                   |
+| `top`        | 设置定位元素的上外边距边界与其包含块上边界之间的偏移 |
+| `bottom`     | 设置定位元素下外边距边界与其包含块下边界之间的偏移   |
+| `left`       | 设置定位元素左外边距边界与其包含块左边界之间的偏移   |
+| `right`      | 设置定位元素右外边距边界与其包含块右边界之间的偏移   |
+| `clip`       | 剪裁绝对定位元素                                     |
+| `float`      | 规定框是否应该浮动                                   |
+| `overflow`   | 规定当内容溢出元素框时发生的事情                     |
+| `cursor`     | 规定要显示的光标的类型（形状）                       |
+| `display`    | 规定元素应该生成的框的类型                           |
+| `visibility` | 规定元素是否可见                                     |
+| `z-index`    | 设置元素的堆叠顺序                                   |
+| `clear`      | 规定元素的哪一侧不允许其他浮动元素                   |
+
+```html
+  <style>
+    div.static {
+      position: static;
+      border: 3px solid #73AD21;
+    }
+
+    p.position-fixed {
+      position: fixed;
+      top: 30px;
+      right: 5px;
+    }
+
+    p.position-left {
+      position: relative;
+      left: -20px;
+    }
+
+    p.position-right {
+      position: relative;
+      left: 20px;
+    }
+
+    p.position-top {
+      position: relative;
+      top: -30px;
+    }
+
+    h2.position-absolute {
+      position: absolute;
+      left: 250px;
+      top: 150px;
+    }
+
+    div.sticky {
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      padding: 5px;
+      background-color: #cae8ca;
+      border: 2px solid #4CAF50;
+    }
+
+    img.position-clip {
+      position: absolute;
+      clip: rect(0px, 60px, 200px, 0px);
+    }
+
+    p img {
+      float: right;
+    }
+
+    div.scroll {
+      background-color: lightblue;
+      width: 180px;
+      height: 180px;
+      overflow: scroll;
+    }
+
+    p.inline {
+      display: inline
+    }
+
+    img.index {
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      z-index: -1;
+    }
+
+    img.clear {
+      float: left;
+    }
+
+    p.clear {
+      clear: both;
+    }
+  </style>
+  <img class="index" src="https://www.runoob.com/try/demo_source/w3css.gif" width="100" height="140" />
+  <p>因为图像元素设置了 z-index 属性值为 -1, 所以它会显示在文字之后。</p>
+  <div class="static">
+    使用 position: static; 定位的元素，无特殊定位，遵循正常的文档流对象:
+  </div>
+  <p class="position-fixed">Some more text</p>
+  <p><b>注意:</b> IE7 和 IE8 支持只有一个 !DOCTYPE 指定固定值.</p>
+  <p> 世人都晓神仙好,惟有功名忘不了! <br> 古今将相在何方?荒冢一堆草没了。<br>
+    世人都晓神仙好,只有金银忘不了!  <br>终朝只恨聚无多,及到多时眼闭了。<br>
+    世人都晓神仙好,只有娇妻忘不了!  <br>君生日日说恩情,君死又随人去了。<br>
+    世人都晓神仙好,只有儿孙忘不了!  <br>痴心父母古来多,孝顺儿孙谁见了?<br></p>
+
+  <p>这是位于正常位置的标题</p>
+  <p class="position-left">这个标题相对于其正常位置向左移动</p>
+  <p class="position-right">这个标题相对于其正常位置向右移动</p>
+  <p>这是位于正常位置的标题</p>
+  <p class="position-top">这个标题是根据其正常位置向上移动</p>
+  <p><b>注意:</b> 即使相对定位元素的内容是移动,预留空间的元素仍保存在正常流动。</p>
+  <h2 class="position-absolute">这是一个绝对定位了的文本</h2>
+
+  <div class="sticky">我是粘性定位!</div>
+
+  <div>
+    <p>滚动我</p>
+    <p>来回滚动我</p>
+    <p>滚动我</p>
+    <p>来回滚动我</p>
+    <p>滚动我</p>
+    <p>来回滚动我</p>
+  </div>
+  <img src="https://www.runoob.com/try/demo_source/w3css.gif" width="100" height="140" /><br>
+  <img class="position-clip" src="https://www.runoob.com/try/demo_source/w3css.gif" width="100" height="140" />
+
+  <p style="padding-top: 150px;">
+    <img src="https://www.runoob.com/try/demo_source/logocss.gif" width="95" height="84" />
+    世人都晓神仙好,惟有功名忘不了! 古今将相在何方?荒冢一堆草没了。
+    世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。
+    世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。
+    世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?
+    世人都晓神仙好,惟有功名忘不了! 古今将相在何方?荒冢一堆草没了。
+    世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。
+    世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。
+    世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?
+  </p>
+  <div class="scroll"> 世人都晓神仙好,惟有功名忘不了! 古今将相在何方?荒冢一堆草没了。
+    世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。
+    世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。
+    世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?
+  </div>
+  <span style="cursor:crosshair">crosshair</span><br>
+  <span style="cursor:move">move</span><br>
+  <p class="inline">这两个段落生成内联盒子,和它的结果</p>
+
+  <p class="inline">这两个元素之间没有距离。</p>
+
+  <img class="clear" src="https://www.runoob.com/try/demo_source/logocss.gif" width="95" height="84" />
+  <p>This is some text. This is some text. This is some text. This is some text. This is some text. This is some text.
+  </p>
+  <p class="clear">This is also some text. This is also some text. This is also some text. This is also some text. This
+    is also some text. This is also some text.</p>
+```
 
 :::
