--- a/src/notes/02css/02.md
+++ b/src/notes/02css/02.md
@@ -14,7 +14,7 @@
 
 :::
 
-:::snippet CSS3 背景属性
+:::snippet CSS3 动画属性
 
 | 属性                | 描述                                                                    |
 | ------------------- | ----------------------------------------------------------------------- |
