--- a/src/notes/02css/01.md
+++ b/src/notes/02css/01.md
@@ -1,13 +1,13 @@
 :::snippet CSS 背景属性
 
-| 属性                    | 描述                                                                         | 默认值      |
-| ----------------------- | ---------------------------------------------------------------------------- | ----------- |
-| `background`            | 复合属性。设置对象的背景特性。                                               | none        |
-| `background-color`      | 设置或检索对象的背景颜色。                                                   | transparent |
-| `background-image`      | 设置或检索对象的背景图像。                                                   | none        |
-| `background-attachment` | 设置或检索背景图像是随对象内容滚动还是固定的。必须先指定 background-image 。 | scroll      |
-| `background-position`   | 设置或检索对象的背景图像位置。必须先指定 background-image 。                 | 0% 0%       |
-| `background-repeat`     | 设置或检索对象的背景图像如何铺排填充。必须先指定 background-image 。         | repeat      |
+| 属性                    | 描述                                                               | 默认值      |
+| ----------------------- | ------------------------------------------------------------------ | ----------- |
+| `background`            | 复合属性。设置对象的背景特性。                                     | none        |
+| `background-color`      | 设置或检索对象的背景颜色。                                         | transparent |
+| `background-image`      | 设置或检索对象的背景图像。                                         | none        |
+| `background-attachment` | 设置或检索背景图像是随对象内容滚动还是固定的。 background-image 。 | scroll      |
+| `background-position`   | 设置或检索对象的背景图像位置。ackground-image 。                   | 0% 0%       |
+| `background-repeat`     | 设置或检索对象的背景图像如何铺排填充。 background-image 。         | repeat      |
 
 ```html
 <style>
@@ -158,7 +158,12 @@
     background-color: yellow;
   }
 </style>
-<img class="height" src="https://www.runoob.com/try/demo_source/logocss.gif" width="95" height="84" />
+<img
+  class="height"
+  src="https://www.runoob.com/try/demo_source/logocss.gif"
+  width="95"
+  height="84"
+/>
 <p class="min-height">这段的最小高度设置为100 px。</p>
 <p class="max-height">
   世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。<br />
@@ -302,161 +307,68 @@ font-size 和 font-family 的值是必需的。如果缺少了其他值，默认
 
 ```html
 <style>
-  p.color1 {
-    color: red;
+  p.color {
+    color: red; /* color: #00ff00; color: rgb(0, 0, 255); */
   }
-
-  p.color2 {
-    color: #00ff00;
-  }
-
-  p.color3 {
-    color: rgb(0, 0, 255);
-  }
-
   p.direction {
     direction: rtl;
     unicode-bidi: bidi-override;
   }
-
-  p.line-height1 {
-    line-height: 70%;
+  p.line-height {
+    line-height: 70%; /* line-height: 25px; */
   }
-
-  p.line-height2 {
-    line-height: 25px;
-  }
-
-  p.letter-spacin1 {
-    letter-spacing: 2px;
-  }
-
-  p.letter-spacin2 {
-    letter-spacing: -3px;
-  }
-
   p.text-transform1 {
-    text-transform: uppercase;
+    text-transform: capitalize; /* text-transform: uppercase; */
   }
-
-  p.text-transform2 {
-    text-transform: lowercase;
-  }
-
-  p.text-transform3 {
-    text-transform: capitalize;
-  }
-
   p.text-indent {
     text-indent: 50px;
   }
-
-  p.text-decoration1 {
-    text-decoration: overline;
+  p.text-decoration {
+    text-decoration: overline; /* text-decoration: underline; */
   }
-
-  p.text-decoration2 {
-    text-decoration: line-through;
+  p.text-align {
+    text-align: center; /* text-align: left; */
   }
-
-  p.text-decoration3 {
-    text-decoration: underline;
+  img.vertical-align {
+    vertical-align: middle; /* vertical-align: text-top;  vertical-align: text-bottom; */
   }
-
-  p.text-align1 {
-    text-align: center;
+  p.letter-spacin {
+    letter-spacing: 5px; /* letter-spacing: -3px; */
   }
-
-  p.text-align2 {
-    text-align: left;
-  }
-
-  p.text-align3 {
-    text-align: right;
-  }
-
-  img.top {
-    vertical-align: text-top;
-  }
-
-  img.middle {
-    vertical-align: middle;
-  }
-
-  img.bottom {
-    vertical-align: text-bottom;
-  }
-
   p.white-space {
     white-space: nowrap;
   }
-
   p.word-spacing {
     word-spacing: 30px;
   }
 </style>
-<p class="color1">这是一个普通的段落red。</p>
-<p class="color2">这是一个普通的段落#00ff00。</p>
-<p class="color3">这是一个普通的段落rgb(0,0,255)。</p>
+<p class="color">这是一个普通的段落red。</p>
 <p>一些文本。默认的书写方向。</p>
 <p class="direction">一些文本。 Right-to-left 方向。</p>
-<p class="line-height1">
+<p class="line-height">
   这是一个更小行高的段落。line-height不允许负数<br />
   这是一个更小行高的段落。<br />
   这是一个更小行高的段落。<br />
 </p>
-
-<p class="line-height2">
-  这是一个更大行高的段落。<br />
-  这是一个更大行高的段落。<br />
-  这是一个更大行高的段落。<br />
-</p>
-<p class="letter-spacin1">这是一个普通的段落。I Love Chinese</p>
-<p class="letter-spacin2">这是一个普通的段落。I Love Chinese</p>
-<p class="text-transform1">This is some text.</p>
-<p class="text-transform2">This is some text.</p>
-<p class="text-transform3">This is some text.</p>
+<p class="text-transform">This is some text.</p>
 <p class="text-indent">
   世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。<br />
   世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。<br />
   世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。<br />
   世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?<br />
 </p>
-<p class="text-decoration1">This is some text.</p>
-<p class="text-decoration2">This is some text.</p>
-<p class="text-decoration3">This is some text.</p>
-<p class="text-align1">This is some text.</p>
-<p class="text-align2">This is some text.</p>
-<p class="text-align3">This is some text.</p>
+<p class="text-decoration">This is some text.</p>
+<p class="text-align">This is some text.</p>
 <p>
   一个<img
-    class="middle"
-    src="https://www.runoob.com/try/demo_source/logo.png"
-    alt="w3cschool"
+    class="vertical-align"
     width="270"
     height="50"
-  />默认对齐的图像。
-</p>
-<p>
-  一个<img
-    class="top"
-    src="https://www.runoob.com/try/demo_source/logo.png"
     alt="w3cschool"
-    width="270"
-    height="50"
-  />
-  text-top 对齐的图像。
-</p>
-<p>
-  一个<img
-    class="bottom"
     src="https://www.runoob.com/try/demo_source/logo.png"
-    alt="w3cschool"
-    width="270"
-    height="50"
-  />
-  text-bottom 对齐的图像。
+  />vertical-align对齐的图像。
 </p>
+<p class="letter-spacin">这是一个普通的段落。I Love Chinese</p>
 <p class="white-space">
   世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。
   世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。
@@ -467,322 +379,6 @@ font-size 和 font-family 的值是必需的。如果缺少了其他值，默认
   世人都晓神仙好,惟有功名忘不了!  古 今 将 相 在 何 方 ? 荒 冢 一堆草没了。 This
   is some text.
 </p>
-```
-
-:::
-
-:::snippet CSS 表格（Table） 属性
-
-| 属性              | 描述                                       |
-| ----------------- | ------------------------------------------ |
-| `border-collapse` | 规定是否合并表格边框                       |
-| `border-spacing`  | 规定相邻单元格边框之间的距离               |
-| `caption-side`    | 规定表格标题的位置                         |
-| `empty-cells`     | 规定是否显示表格中的空单元格上的边框和背景 |
-| `table-layout`    | 设置用于表格的布局算法                     |
-
-```html
-<style>
-  table.collapse {
-    border: 1px solid black;
-    border-collapse: collapse;
-  }
-
-  table.collapse,
-  table.collapse td,
-  table.collapse th {
-    border: 1px solid black;
-  }
-
-  table.spacing {
-    border-collapse: separate;
-    border-spacing: 10px;
-  }
-
-  caption {
-    caption-side: bottom;
-  }
-
-  table.empty {
-    border-collapse: separate;
-    empty-cells: hide;
-  }
-
-  table.layout1 {
-    table-layout: auto;
-  }
-
-  table.layout2 {
-    table-layout: fixed;
-  }
-</style>
-border-collapse
-<table class="collapse">
-  <tr>
-    <th>Firstname</th>
-    <th>Lastname</th>
-  </tr>
-  <tr>
-    <td>Peter</td>
-    <td>Griffin</td>
-  </tr>
-  <tr>
-    <td>Lois</td>
-    <td>Griffin</td>
-  </tr>
-</table>
-
-<br />
-border-spacing
-<table class="spacing" border="1">
-  <tr>
-    <td>Peter</td>
-    <td>Griffin</td>
-  </tr>
-  <tr>
-    <td>Lois</td>
-    <td>Griffin</td>
-  </tr>
-</table>
-
-<br />
-caption
-<table border="1">
-  <caption>
-    Table 1.1 Customers
-  </caption>
-  <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
-  </tr>
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-  </tr>
-</table>
-
-<br />
-empty-cells
-<table border="1" class="empty">
-  <tr>
-    <td>Peter</td>
-    <td>Griffin</td>
-  </tr>
-  <tr>
-    <td>Lois</td>
-    <td></td>
-  </tr>
-</table>
-
-<br />
-table-layout:auto
-<table class="layout1" border="1" width="100%">
-  <tr>
-    <td width="5%">1000000000000000000000000000</td>
-    <td width="95%">10000000</td>
-  </tr>
-</table>
-
-<br />
-table-layout:fixed
-<table class="layout2" border="1" width="100%">
-  <tr>
-    <td width="5%">1000000000000000000000000000</td>
-    <td width="95%">10000000</td>
-  </tr>
-</table>
-```
-
-:::
-
-:::snippet CSS 列表(List) 属性
-list-style 简写属性在一个声明中设置所有的列表属性。
-
-可以设置的属性（按顺序）： list-style-type, list-style-position, list-style-image.
-
-可以不设置其中的某个值，比如 "list-style:circle inside;" 也是允许的。未设置的属性会使用其默认值。
-
-| 属性                  | 描述                           |
-| --------------------- | ------------------------------ |
-| `list-style`          | 在一个声明中设置所有的列表属性 |
-| `list-style-image`    | 将图象设置为列表项标记         |
-| `list-style-position` | 设置列表项标记的放置位置       |
-| `list-style-type`     | 设置列表项标记的类型           |
-
-```html
-<style>
-  ul {
-    list-style: square inside url("sqpurple.gif");
-  }
-</style>
-该列表的 list-style-position 的值是 "inside"：
-<ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Coca Cola</li>
-</ul>
-```
-
-:::
-
-:::snippet CSS 定位（Positioning） 属性
-
-| 属性         | 描述                                                 |
-| ------------ | ---------------------------------------------------- |
-| `position`   | 规定元素的定位类型                                   |
-| `top`        | 设置定位元素的上外边距边界与其包含块上边界之间的偏移 |
-| `bottom`     | 设置定位元素下外边距边界与其包含块下边界之间的偏移   |
-| `left`       | 设置定位元素左外边距边界与其包含块左边界之间的偏移   |
-| `right`      | 设置定位元素右外边距边界与其包含块右边界之间的偏移   |
-| `clip`       | 剪裁绝对定位元素                                     |
-| `float`      | 规定框是否应该浮动                                   |
-| `overflow`   | 规定当内容溢出元素框时发生的事情                     |
-| `cursor`     | 规定要显示的光标的类型（形状）                       |
-| `display`    | 规定元素应该生成的框的类型                           |
-| `visibility` | 规定元素是否可见                                     |
-| `z-index`    | 设置元素的堆叠顺序                                   |
-| `clear`      | 规定元素的哪一侧不允许其他浮动元素                   |
-
-```html
-  <style>
-    div.static {
-      position: static;
-      border: 3px solid #73AD21;
-    }
-
-    p.position-fixed {
-      position: fixed;
-      top: 30px;
-      right: 5px;
-    }
-
-    p.position-left {
-      position: relative;
-      left: -20px;
-    }
-
-    p.position-right {
-      position: relative;
-      left: 20px;
-    }
-
-    p.position-top {
-      position: relative;
-      top: -30px;
-    }
-
-    h2.position-absolute {
-      position: absolute;
-      left: 250px;
-      top: 150px;
-    }
-
-    div.sticky {
-      position: -webkit-sticky;
-      position: sticky;
-      top: 0;
-      padding: 5px;
-      background-color: #cae8ca;
-      border: 2px solid #4CAF50;
-    }
-
-    img.position-clip {
-      position: absolute;
-      clip: rect(0px, 60px, 200px, 0px);
-    }
-
-    p img {
-      float: right;
-    }
-
-    div.scroll {
-      background-color: lightblue;
-      width: 180px;
-      height: 180px;
-      overflow: scroll;
-    }
-
-    p.inline {
-      display: inline
-    }
-
-    img.index {
-      position: absolute;
-      left: 0px;
-      top: 0px;
-      z-index: -1;
-    }
-
-    img.clear {
-      float: left;
-    }
-
-    p.clear {
-      clear: both;
-    }
-  </style>
-  <img class="index" src="https://www.runoob.com/try/demo_source/w3css.gif" width="100" height="140" />
-  <p>因为图像元素设置了 z-index 属性值为 -1, 所以它会显示在文字之后。</p>
-  <div class="static">
-    使用 position: static; 定位的元素，无特殊定位，遵循正常的文档流对象:
-  </div>
-  <p class="position-fixed">Some more text</p>
-  <p><b>注意:</b> IE7 和 IE8 支持只有一个 !DOCTYPE 指定固定值.</p>
-  <p> 世人都晓神仙好,惟有功名忘不了! <br> 古今将相在何方?荒冢一堆草没了。<br>
-    世人都晓神仙好,只有金银忘不了!  <br>终朝只恨聚无多,及到多时眼闭了。<br>
-    世人都晓神仙好,只有娇妻忘不了!  <br>君生日日说恩情,君死又随人去了。<br>
-    世人都晓神仙好,只有儿孙忘不了!  <br>痴心父母古来多,孝顺儿孙谁见了?<br></p>
-
-  <p>这是位于正常位置的标题</p>
-  <p class="position-left">这个标题相对于其正常位置向左移动</p>
-  <p class="position-right">这个标题相对于其正常位置向右移动</p>
-  <p>这是位于正常位置的标题</p>
-  <p class="position-top">这个标题是根据其正常位置向上移动</p>
-  <p><b>注意:</b> 即使相对定位元素的内容是移动,预留空间的元素仍保存在正常流动。</p>
-  <h2 class="position-absolute">这是一个绝对定位了的文本</h2>
-
-  <div class="sticky">我是粘性定位!</div>
-
-  <div>
-    <p>滚动我</p>
-    <p>来回滚动我</p>
-    <p>滚动我</p>
-    <p>来回滚动我</p>
-    <p>滚动我</p>
-    <p>来回滚动我</p>
-  </div>
-  <img src="https://www.runoob.com/try/demo_source/w3css.gif" width="100" height="140" /><br>
-  <img class="position-clip" src="https://www.runoob.com/try/demo_source/w3css.gif" width="100" height="140" />
-
-  <p style="padding-top: 150px;">
-    <img src="https://www.runoob.com/try/demo_source/logocss.gif" width="95" height="84" />
-    世人都晓神仙好,惟有功名忘不了! 古今将相在何方?荒冢一堆草没了。
-    世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。
-    世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。
-    世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?
-    世人都晓神仙好,惟有功名忘不了! 古今将相在何方?荒冢一堆草没了。
-    世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。
-    世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。
-    世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?
-  </p>
-  <div class="scroll"> 世人都晓神仙好,惟有功名忘不了! 古今将相在何方?荒冢一堆草没了。
-    世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。
-    世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。
-    世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?
-  </div>
-  <span style="cursor:crosshair">crosshair</span><br>
-  <span style="cursor:move">move</span><br>
-  <p class="inline">这两个段落生成内联盒子,和它的结果</p>
-
-  <p class="inline">这两个元素之间没有距离。</p>
-
-  <img class="clear" src="https://www.runoob.com/try/demo_source/logocss.gif" width="95" height="84" />
-  <p>This is some text. This is some text. This is some text. This is some text. This is some text. This is some text.
-  </p>
-  <p class="clear">This is also some text. This is also some text. This is also some text. This is also some text. This
-    is also some text. This is also some text.</p>
 ```
 
 :::
