--- a/src/notes/01html/01.md
+++ b/src/notes/01html/01.md
@@ -92,19 +92,19 @@
   </pre>
 好了歌：
 <blockquote cite="https://baike.baidu.com/item/%E7%BA%A2%E6%A5%BC%E6%A2%A6/15311?fr=aladdin">
-  世人都晓神仙好,惟有功名忘不了! 
+  世人都晓神仙好,惟有功名忘不了!
   古今将相在何方?荒冢一堆草没了。
-  世人都晓神仙好,只有金银忘不了! 
+  世人都晓神仙好,只有金银忘不了!
   终朝只恨聚无多,及到多时眼闭了。
-  世人都晓神仙好,只有娇妻忘不了! 
+  世人都晓神仙好,只有娇妻忘不了!
   君生日日说恩情,君死又随人去了。
-  世人都晓神仙好,只有儿孙忘不了! 
+  世人都晓神仙好,只有儿孙忘不了!
   痴心父母古来多,孝顺儿孙谁见了?
 </blockquote>
 <br>
 神仙好：
 <q cite="https://baike.baidu.com/item/%E7%BA%A2%E6%A5%BC%E6%A2%A6/15311?fr=aladdin">
-  世人都晓神仙好,惟有功名忘不了! 
+  世人都晓神仙好,惟有功名忘不了!
 </q> <br>
 <cite>红楼梦</cite>清代 曹雪芹著.<br>
 <code>一段电脑代码</code> <br>
@@ -379,23 +379,28 @@
 ```html
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="description" content="免费在线教程" />
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript" />
+    <meta name="author" content="runoob" />
+    <meta charset="UTF-8" />
+    <base href="http://www.runoob.com/images/" target="_blank" />
+    <title>文档标题</title>
+  </head>
 
-<head>
-  <meta name="description" content="免费在线教程">
-  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-  <meta name="author" content="runoob">
-  <meta charset="UTF-8">
-  <base href="http://www.runoob.com/images/" target="_blank">
-  <title>文档标题</title>
-</head>
-
-<body>
-  <p><img src="logo.png"> - 注意这里我们设置了图片的相对地址。能正常显示是因为我们在 head 部分设置了 base 标签，该标签指定了页面上所有链接的默认 URL，所以该图片的访问地址为
-    "http://www.runoob.com/images/logo.png"</p>
-  <p><a href="//www.runoob.com/">runoob.com</a> - 注意这个链接会在新窗口打开，即便它没有 target="_blank" 属性。因为在 base 标签里我们已经设置了 target
-    属性的值为 "_blank"。</p>
-</body>
-
+  <body>
+    <p>
+      <img src="logo.png" /> -
+      注意这里我们设置了图片的相对地址。能正常显示是因为我们在 head 部分设置了
+      base 标签，该标签指定了页面上所有链接的默认 URL，所以该图片的访问地址为
+      "http://www.runoob.com/images/logo.png"
+    </p>
+    <p>
+      <a href="//www.runoob.com/">runoob.com</a> -
+      注意这个链接会在新窗口打开，即便它没有 target="_blank" 属性。因为在 base
+      标签里我们已经设置了 target 属性的值为 "_blank"。
+    </p>
+  </body>
 </html>
 ```
 
@@ -413,24 +418,26 @@
 ```html
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta name="description" content="免费在线教程">
-  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-  <meta name="author" content="runoob">
-  <meta charset="UTF-8">
-  <title>文档标题</title>
-</head>
-<script>
-  document.write("Hello World!")
+  <head>
+    <meta name="description" content="免费在线教程" />
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript" />
+    <meta name="author" content="runoob" />
+    <meta charset="UTF-8" />
+    <title>文档标题</title>
+  </head>
+  <script>
+    document.write("Hello World!");
   </script>
-<body>
-  <noscript>抱歉，你的浏览器不支持 JavaScript!</noscript>
-  <p>不支持 JavaScript 的浏览器会使用 &lt;noscript&gt; 元素中定义的内容（文本）来替代。</p>
-  <object data="http://www.runoob.com/try/demo_source/horse.wav">
-    <param name="autoplay" value="true">
-  </object>
-</body>
+  <body>
+    <noscript>抱歉，你的浏览器不支持 JavaScript!</noscript>
+    <p>
+      不支持 JavaScript 的浏览器会使用 &lt;noscript&gt;
+      元素中定义的内容（文本）来替代。
+    </p>
+    <object data="http://www.runoob.com/try/demo_source/horse.wav">
+      <param name="autoplay" value="true" />
+    </object>
+  </body>
 </html>
 ```
 
