--- a/src/notes/02css/03.md
+++ b/src/notes/02css/03.md
@@ -1,406 +1,85 @@
-:::snippet CSS 权重计算规则
+:::snippet CSS3 背景属性
 
-1. 第一等：代表内联样式，如: style=""，权值为 1000。
-
-2. 第二等：代表 ID 选择器，如：#content，权值为 0100。
-
-3. 第三等：代表类，伪类和属性选择器，如.content，权值为 0010。
-
-4. 第四等：代表类型选择器和伪元素选择器，如 div p，权值为 0001。
-
-5. 通配符、子选择器、相邻选择器等的。如\*、>、+,权值为 0000。
-
-6. 继承的样式没有权值。
+| 属性                | 描述                                                                    |
+| ------------------- | ----------------------------------------------------------------------- |
+| `background-clip`   | 指定对象的背景图像向外裁剪的区域。                                      |
+| `background-origin` | S 设置或检索对象的背景图像计算 background-position 时的参考原点(位置)。 |
+| `background-size`   | 检索或设置对象的背景图像的尺寸大小。                                    |
 
 :::
 
-:::snippet CSS 选择器
+:::snippet CSS3 边框(Border) 和 轮廓(Outline) 属性
 
-| 选择器                  | 示例              | 示例说明                                        |
-| ----------------------- | ----------------- | ----------------------------------------------- |
-| `.class`                | `.intro`          | 选择所有 class="intro"的元素                    |
-| `#id`                   | `#firstname`      | 选择所有 id="firstname"的元素                   |
-| `*`                     | `*`               | 选择所有元素                                    |
-| `element`               | `p`               | 选择所有`<p>`元素                               |
-| `element,element`       | `div,p`           | 选择所有`<div>`元素和`<p>`元素                  |
-| `element element`       | `div p`           | 选择`<div>`元素内的所有`<p>`元素                |
-| `element>element`       | `div>p`           | 选择所有父级是 `<div>` 元素的 `<p>` 元素        |
-| `element+element`       | `div+p`           | 选择所有紧接着`<div>`元素之后的`<p>`元素        |
-| `[attribute]`           | `[target]`        | 选择所有带有 target 属性元素                    |
-| `[attribute=value]`     | `[target=-blank]` | 选择所有使用 target="-blank"的元素              |
-| `[attribute~=value]`    | `[title~=flower]` | 选择标题属性包含单词"flower"的所有元素          |
-| `[attribute|=language]` | `[lang|=en]`      | 选择 lang 属性以 en 为开头的所有元素            |
-| `:link`                 | `a:link`          | 选择所有未访问链接                              |
-| `:visited`              | `a:visited`       | 选择所有访问过的链接                            |
-| `:active`               | `a:active`        | 选择活动链接                                    |
-| `:hover`                | `a:hover`         | 选择鼠标在链接上面时                            |
-| `:focus`                | `input:focus`     | 选择具有焦点的输入元素                          |
-| `:first-letter`         | `p:first-letter`  | 选择每一个`<p>`元素的第一个字母                 |
-| `:first-line`           | `p:first-line`    | 选择每一个`<p>`元素的第一行                     |
-| `:first-child`          | `p:first-child`   | 指定只有当`<p>`元素是其父级的第一个子级的样式。 |
-| `:before`               | `p:before`        | 在每个`<p>`元素之前插入内容                     |
-| `:after`                | `p:after`         | 在每个`<p>`元素之后插入内容                     |
-| `:lang(language)`       | `p:lang(it)`      | 选择一个 lang 属性的起始值="it"的所有`<p>`元素  |
+| 属性                         | 描述                                                                         |
+| ---------------------------- | ---------------------------------------------------------------------------- |
+| `border-bottom-left-radius`  | 设置或检索对象的左下角圆角边框。提供 2 个参数。                              |
+| `border-bottom-right-radius` | 设置或检索对象的右下角圆角边框。                                             |
+| `border-image`               | 设置或检索对象的边框样式使用图像来填充。                                     |
+| `border-image-outset`        | 规定边框图像超过边框的量。                                                   |
+| `border-image-repeat`        | 规定图像边框是否应该被重复（repeated）、拉伸（stretched）或铺满（rounded）。 |
+| `border-image-slice`         | 规定图像边框的向内偏移。                                                     |
+| `border-image-source`        | 规定要使用的图像，代替 border-style 属性中设置的边框样式。                   |
+| `border-image-width`         | 规定图像边框的宽度。                                                         |
+| `border-radius`              | 设置或检索对象使用圆角边框。                                                 |
+| `border-top-left-radius`     | 定义左上角边框的形状。                                                       |
+| `border-top-right-radius`    | 定义右上角边框的形状。                                                       |
+| `box-decoration-break`       | 规定行内元素被折行                                                           |
+| `box-shadow`                 | 向方框添加一个或多个阴影。                                                   |
 
 :::
 
-:::snippet CSS3 选择器
+:::snippet CSS3 媒体页面内容属性
 
-| 选择器                 | 示例                    | 示例说明                                                     |
-| ---------------------- | ----------------------- | ------------------------------------------------------------ |
-| `[attribute^=value]`   | `a[src^="https"]`       | 选择每一个 src 属性的值以"https"开头的元素                   |
-| `[attribute$=value]`   | `a[src$=".pdf"]`        | 选择每一个 src 属性的值以".pdf"结尾的元素                    |
-| `[attribute*=value]`   | `a[src*="runoob"]`      | 选择每一个 src 属性的值包含子字符串"runoob"的元素            |
-| `:first-of-type`       | `p:first-of-type`       | 选择每个 p 元素是其父级的第一个 p 元素                       |
-| `:last-of-type`        | `p:last-of-type`        | 选择每个 p 元素是其父级的最后一个 p 元素                     |
-| `:only-of-type`        | `p:only-of-type`        | 选择每个 p 元素是其父级的唯一 p 元素                         |
-| `:only-child`          | `p:only-child`          | 选择每个 p 元素是其父级的唯一子元素                          |
-| `:nth-child(n)`        | `p:nth-child(2)`        | 选择每个 p 元素是其父级的第二个子元素                        |
-| `:nth-last-child(n)`   | `p:nth-last-child(2)`   | 选择每个 p 元素的是其父级的第二个子元素，从最后一个子项计数  |
-| `:nth-of-type(n)`      | `p:nth-of-type(2)`      | 选择每个 p 元素是其父级的第二个 p 元素                       |
-| `:nth-last-of-type(n)` | `p:nth-last-of-type(2)` | 选择每个 p 元素的是其父级的第二个 p 元素，从最后一个子项计数 |
-| `:last-child`          | `p:last-child`          | 选择每个 p 元素是其父级的最后一个子级。                      |
-| `:root`                | `:root`                 | 选择文档的根元素                                             |
-| `:empty`               | `p:empty`               | 选择每个没有任何子级的 p 元素（包括文本节点）                |
-| `:target`              | `#news:target`          | 选择当前活动的#news 元素（包含该锚名称的点击的 URL）         |
-| `:enabled`             | `input:enabled`         | 选择每一个已启用的输入元素                                   |
-| `:disabled`            | `input:disabled`        | 选择每一个禁用的输入元素                                     |
-| `:checked`             | `input:checked`         | 选择每个选中的输入元素                                       |
-| `:not(selector)`       | `:not(p)`               | 选择每个并非 p 元素的元素                                    |
-| `::selection`          | `::selection`           | 匹配元素中被用户选中或处于高亮状态的部分                     |
-| `:out-of-range`        | `:out-of-range`         | 匹配值在指定区间之外的 input 元素                            |
-| `:in-range`            | `:in-range`             | 匹配值在指定区间之内的 input 元素                            |
-| `:read-write`          | `:read-write`           | 用于匹配可读及可写的元素                                     |
-| `:read-only`           | `:read-only`            | 用于匹配设置 "readonly"（只读） 属性的元素                   |
-| `:optional`            | `:optional`             | 用于匹配可选的输入元素                                       |
-| `:required`            | `:required`             | 用于匹配设置了 "required" 属性的元素                         |
-| `:valid`               | `:valid`                | 用于匹配输入值为合法的元素                                   |
-| `:invalid`             | `:invalid`              | 用于匹配输入值为非法的元素                                   |
+| 属性                  | 描述                                                       |
+| --------------------- | ---------------------------------------------------------- |
+| `bookmark-label`      | 指定书签的标签                                             |
+| `bookmark-level`      | 指定了书签级别                                             |
+| `bookmark-target`     | 指定了书签链接的目标                                       |
+| `float-offset`        | 在相反的方向推动浮动元素，他们一直具有浮动                 |
+| `hyphenate-after`     | 指定一个断字的单词断字字符后的最少字符数                   |
+| `hyphenate-before`    | 指定一个断字的单词断字字符前的最少字符数                   |
+| `hyphenate-character` | 指定了当一个断字发生时，要显示的字符串                     |
+| `hyphenate-lines`     | 表示连续断字的行在元素的最大数目                           |
+| `hyphenate-resource`  | 外部资源指定一个逗号分隔的列表，可以帮助确定浏览器的断字点 |
+| `hyphens`             | 设置如何分割单词以改善该段的布局                           |
+| `image-resolution`    | 指定了正确的图像分辨率                                     |
+| `marks`               | 将 crop and/or cross 标志添加到文档                        |
 
 :::
 
-:::snippet CSS3 函数(attr 不是 CSS3)
+:::snippet CSS3 字体（Font） 属性
 
-| 函数                          | 描述                                                           |
-| ----------------------------- | -------------------------------------------------------------- |
-| `attr()`                      | 返回选择元素的属性值。                                         |
-| `calc()`                      | 允许计算 CSS 的属性值，比如动态计算长度值。                    |
-| `cubic-bezier()`              | 定义了一个贝塞尔曲线(Cubic Bezier)。 3                         |
-| `hsl()`                       | 使用色相、饱和度、亮度来定义颜色。                             |
-| `hsla()`                      | 使用色相、饱和度、亮度、透明度来定义颜色。                     |
-| `linear-gradient()`           | 创建一个线性渐变的图像                                         |
-| `radial-gradient()`           | 用径向渐变创建图像。                                           |
-| `repeating-linear-gradient()` | 用重复的线性渐变创建图像。                                     |
-| `repeating-radial-gradient()` | 类似 radial-gradient()，用重复的径向渐变创建图像。             |
-| `rgb()`                       | 使用红(R)、绿(G)、蓝(B)三个颜色的叠加来生成各式各样的颜色。    |
-| `rgba()`                      | 使用红(R)、绿(G)、蓝(B)、透明度(A)的叠加来生成各式各样的颜色。 |
-| `var()`                       | 用于插入自定义的属性值。                                       |
+| 属性               | 描述                                                      |
+| ------------------ | --------------------------------------------------------- |
+| `@font-face`       | 一个规则，允许网站下载并使用其他超过"Web- safe"字体的字体 |
+| `font-size-adjust` | 为元素规定 aspect 值                                      |
+| `font-stretch`     | 收缩或拉伸当前的字体系列                                  |
 
 :::
 
-:::snippet CSS attr()函数
+:::snippet CSS3 内容生成属性(Generated Content Properties)
 
-```html
-<style>
-  a:after {
-    content: " (" attr(href) ")";
-  }
-</style>
-<p><a href="//www.runoob.com">菜鸟教程</a></p>
-<p><a href="//www.runoob.com/html/">HTML 教程</a></p>
-```
+| 属性          | 描述                                                     |
+| ------------- | -------------------------------------------------------- |
+| `crop`        | 允许 replaced 元素只是作为一个对象代替整个对象的矩形区域 |
+| `move-to`     | 从流中删除元素，然后在文档中后面的点上重新插入。         |
+| `page-policy` | 判定基于页面的给定元素的适用于计数器的字符串值           |
 
 :::
 
-:::snippet CSS3 calc()函数
+:::snippet CSS3 文本（Text） 属性
 
-```html
-<style>
-  #div1 {
-    position: absolute;
-    left: 50px;
-    width: calc(100% - 100px);
-    border: 1px solid black;
-    background-color: yellow;
-    padding: 5px;
-    text-align: center;
-  }
-</style>
-<p>创建一个横跨屏幕的div，div 两边有 50px 的间隙：</p>
-<div id="div1">一些文本...</div>
-```
-
-:::
-
-:::snippet CSS3 cubic-bezier()函数
-
-```html
-<style>
-  div {
-    width: 100px;
-    height: 100px;
-    background: red;
-    transition: width 2s;
-    transition-timing-function: cubic-bezier(0.1, 0.7, 1, 0.1);
-  }
-  div:hover {
-    width: 300px;
-  }
-</style>
-<p>鼠标移动到 div 元素上，查看效果。</p>
-<div></div>
-<p><b>注意:</b> Internet Explorer 9 及其更早版本的浏览器不支持该效果。</p>
-```
-
-:::
-
-:::snippet CSS3 hsl()函数
-
-```html
-<style>
-  #p1 {
-    background-color: hsl(120, 100%, 50%);
-  }
-  #p2 {
-    background-color: hsl(120, 100%, 75%);
-  }
-  #p3 {
-    background-color: hsl(120, 100%, 25%);
-  }
-  #p4 {
-    background-color: hsl(120, 60%, 70%);
-  }
-  #p5 {
-    background-color: hsl(290, 100%, 50%);
-  }
-  #p6 {
-    background-color: hsl(290, 60%, 70%);
-  }
-</style>
-<p id="p1">绿色</p>
-<p id="p2">浅绿</p>
-<p id="p3">暗绿</p>
-<p id="p4">柔和的绿色</p>
-<p id="p5">紫色</p>
-<p id="p6">柔和的紫色</p>
-```
-
-:::
-
-:::snippet CSS3 hsla()函数
-
-```html
-<style>
-  #p1 {
-    background-color: hsla(120, 100%, 50%, 0.3);
-  }
-  #p2 {
-    background-color: hsla(120, 100%, 75%, 0.3);
-  }
-  #p3 {
-    background-color: hsla(120, 100%, 25%, 0.3);
-  }
-  #p4 {
-    background-color: hsla(120, 60%, 70%, 0.3);
-  }
-  #p5 {
-    background-color: hsla(290, 100%, 50%, 0.3);
-  }
-  #p6 {
-    background-color: hsla(290, 60%, 70%, 0.3);
-  }
-</style>
-<p id="p1">绿色</p>
-<p id="p2">浅绿</p>
-<p id="p3">暗绿</p>
-<p id="p4">柔和的绿色</p>
-<p id="p5">紫色</p>
-<p id="p6">柔和的紫色</p>
-```
-
-:::
-
-:::snippet CSS3 linear-gradient()函数
-
-```html
-<style>
-  #grad1 {
-    height: 200px;
-    background-image: linear-gradient(red, yellow, blue);
-  }
-</style>
-<p>从头部开始的线性渐变，从红色开始，转为黄色，再到蓝色:</p>
-<div id="grad1"></div>
-```
-
-:::
-
-:::snippet CSS3 radial-gradient()函数
-
-```html
-<style>
-  #grad1 {
-    height: 150px;
-    width: 200px;
-    background-color: red; /* 浏览器不支持的时候显示 */
-    background-image: radial-gradient(
-      red,
-      green,
-      blue
-    ); /* 标准的语法（必须放在最后） */
-  }
-</style>
-<p>径向渐变 - 颜色结点均匀分布</p>
-<div id="grad1"></div>
-```
-
-:::
-
-:::snippet CSS3 repeating-linear-gradient()函数
-
-```html
-<style>
-  #grad1 {
-    height: 200px;
-    background-color: red; /* 浏览器不支持的时候显示 */
-    background-image: repeating-linear-gradient(red, yellow 10%, green 20%);
-  }
-  #grad2 {
-    height: 200px;
-    background-color: red; /* 浏览器不支持的时候显示 */
-    background-image: repeating-linear-gradient(
-      45deg,
-      red,
-      yellow 7%,
-      green 10%
-    );
-  }
-  #grad3 {
-    height: 200px;
-    background-color: red; /* 浏览器不支持的时候显示 */
-    background-image: repeating-linear-gradient(
-      190deg,
-      red,
-      yellow 7%,
-      green 10%
-    );
-  }
-  #grad4 {
-    height: 200px;
-    background-color: red; /* 浏览器不支持的时候显示 */
-    background-image: repeating-linear-gradient(
-      90deg,
-      red,
-      yellow 7%,
-      green 10%
-    );
-  }
-</style>
-<p>重复的线性渐变</p>
-<div id="grad1"></div>
-<p>45deg:</p>
-<div id="grad2"></div>
-<p>190deg:</p>
-<div id="grad3"></div>
-<p>90deg:</p>
-<div id="grad4"></div>
-```
-
-:::
-
-:::snippet CSS3 rgb()函数
-
-```html
-<style>
-  #p1 {
-    background-color: rgb(255, 0, 0);
-  }
-  #p2 {
-    background-color: rgb(0, 255, 0);
-  }
-  #p3 {
-    background-color: rgb(0, 0, 255);
-  }
-  #p4 {
-    background-color: rgb(192, 192, 192);
-  }
-  #p5 {
-    background-color: rgb(255, 255, 0);
-  }
-  #p6 {
-    background-color: rgb(255, 0, 255);
-  }
-</style>
-<p>RGB 颜色:</p>
-<p id="p1">红色</p>
-<p id="p2">绿色</p>
-<p id="p3">蓝色</p>
-<p id="p4">灰色</p>
-<p id="p5">黄色</p>
-<p id="p6">樱桃色</p>
-```
-
-:::
-
-:::snippet CSS3 rgb()函数
-
-```html
-<style>
-  #p1 {
-    background-color: rgb(255, 0, 0, 0.3);
-  }
-  #p2 {
-    background-color: rgb(0, 255, 0, 0.3);
-  }
-  #p3 {
-    background-color: rgb(0, 0, 255, 0.3);
-  }
-  #p4 {
-    background-color: rgb(192, 192, 192, 0.3);
-  }
-  #p5 {
-    background-color: rgb(255, 255, 0, 0.3);
-  }
-  #p6 {
-    background-color: rgb(255, 0, 255, 0.3);
-  }
-</style>
-<p>RGB 颜色，并使用透明度:</p>
-<p id="p1">红色</p>
-<p id="p2">绿色</p>
-<p id="p3">蓝色</p>
-<p id="p4">灰色</p>
-<p id="p5">黄色</p>
-<p id="p6">樱桃色</p>
-```
-
-:::
-
-:::snippet CSS3 rgb()函数
-
-```html
-<style>
-  :root {
-    --main-bg-color: coral;
-    --sub-bg-color: red;
-  }
-
-  #div1 {
-    background-color: var(--main-bg-color);
-    padding: 5px;
-  }
-  #div2 {
-    background-color: var(--sub-bg-color);
-    padding: 5px;
-  }
-  #div3 {
-    background-color: var(--main-bg-color);
-    padding: 5px;
-  }
-</style>
-<div id="div1">忠义荡然，儒溺千古！</div>
-<div id="div2">大爱无情，佛灭众生！</div>
-<div id="div3">天地不仁，道吞万物！</div>
-```
+| 属性                  | 描述                                                  |
+| --------------------- | ----------------------------------------------------- |
+| `hanging-punctuation` | 指定一个标点符号是否可能超出行框                      |
+| `punctuation-trim`    | 指定一个标点符号是否要去掉                            |
+| `text-align-last`     | 当 text-align 设置为 justify 时，最后一行的对齐方式。 |
+| `text-justify`        | 当 text-align 设置为 justify 时指定分散对齐的方式。   |
+| `text-outline`        | 设置文字的轮廓。                                      |
+| `text-overflow`       | 指定当文本溢出包含的元素，应该发生什么                |
+| `text-shadow`         | 为文本添加阴影                                        |
+| `text-wrap`           | 指定文本换行规则                                      |
+| `word-break`          | 指定非 CJK 文字的断行规则                             |
+| `word-wrap`           | 设置浏览器是否对过长的单词进行换行。                  |
 
 :::
